name:                cube
version:             0.1.0
synopsis:            Cubic DSL for 3D printing
description:         Cubic DSL for 3D printing
license:             BSD3
license-file:        LICENSE
author:              Junji Hashimoto
maintainer:          junji.hashimoto@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

bug-reports:         https://github.com/junjihashimoto/cube/issues

extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:           git
  location:       https://github.com/junjihashimoto/cube.git

library
  exposed-modules:     Language.Cube
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4 && <5
                     , STL
                     , cereal
                     , bytestring
                     , containers
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:       -Wall

test-suite test
  type:              exitcode-stdio-1.0
  main-is:           test.hs
  hs-source-dirs:    tests,dist/build/autogen
  ghc-options:       -Wall

  build-depends:       base >=4 && <5
                     , cube
                     , STL
                     , cereal
                     , bytestring
                     , containers
                     , hspec
  Default-Language:   Haskell2010
